bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type boolean
var etat : boolean = false 
           ^